[package]
name = "ottr"
version = "0.1.0"
edition = "2021"

[lib]
name = "ottr"
path = "src/lib.rs"

[[example]]
name = "cantilever_sin_load"

[[example]]
name = "beam_mode_sweep"

[[example]]
name = "bar_urc_model_compare"

[dependencies]
equator = "0.4.2"
faer = "0.22.6"
gauss-quad = "0.2.1"
interp = "2.0.2"
itertools = "0.13.0"
netcdf = { version = "0.11.0", features = ["static"] }
serde = "1.0.219"
serde_yaml = "0.9.34"
splines = "5.0.0"
vtkio = "0.6"
