[package]
name = "ottr"
version = "0.1.0"
edition = "2021"

[lib]
name = "ottr"
path = "src/lib.rs"

[[example]]
name = "cantilever_sin_load"

[[example]]
name = "beam_mode_sweep"

[[example]]
name = "bar_urc_model_compare"

[[example]]
name = "blade_aero"

[[example]]
name = "iea15-aero"

[dependencies]
approx = "0.5.1"
equator = "0.4.2"
faer = "0.22.6"
gauss-quad = "0.2.1"
interp = "2.0.2"
itertools = "0.13.0"
netcdf = { version = "0.11.0", features = ["static"] }
rayon = "1.10.0"
serde = "1.0.219"
serde_yaml = "0.9.34"
splines = "5.0.0"
vtkio = "0.6"

[profile.dev.package.faer]
opt-level = 3

[profile.profiling.package.faer]
opt-level = 3
